[gd_scene load_steps=3 format=3 uid="uid://c2u2vsqack1g3"]

[ext_resource type="Script" uid="uid://dvuws0vs17ke1" path="res://scripts/ui/upgrades_panel.gd" id="1_b04e6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo758"]
bg_color = Color(0.651175, 0.589335, 0.520266, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[node name="UpgradesPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b04e6")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bo758")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -106.0
offset_right = 0.5
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2

[node name="KeystoneZone" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="KeystoneLabel" type="Label" parent="VBoxContainer/KeystoneZone"]
layout_mode = 2

[node name="AdvancedZone" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2

[node name="AdvancedLabel" type="Label" parent="VBoxContainer/AdvancedZone"]
layout_mode = 2

[node name="StarterZone" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 80)
layout_mode = 2

[node name="StarterLabel" type="Label" parent="VBoxContainer/StarterZone"]
layout_mode = 2

[node name="TreeDetailPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="TreeDetailPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Content" type="Control" parent="TreeDetailPanel"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
